se cambia a el proyecto para que funcione con java fx